fix(notifications): cron job url and secret
- Fix cron job URL in github workflow
- Add .env to .gitignore and remove from tracking
- Generate new cron secret

--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -13,5 +13,5 @@ jobs:
       - name: Call send-notifications API
         run: |
           curl --request GET \
-          --url 'https://<YOUR_APP_URL>/api/send-notifications' \
+          --url 'https://belo-noti.vercel.app/api/send-notifications' \
           --header 'Authorization: Bearer ${{ secrets.CRON_SECRET }}'
