--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "firebase": "^12.2.1",
     "firebase-admin": "^12.3.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "@supabase/supabase-js": "^2.81.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
